@@ -1,5 +1,9 @@
 2012-11-12  Ian Bolton  <ian.bolton@arm.com>
 
+	* gcc.target/aarch64/csinc-2.c: New test.
+
+2012-11-12  Ian Bolton  <ian.bolton@arm.com>
+
 	* gcc.target/aarch64/cmn.c: New test.
 	* gcc.target/aarch64/adds.c: New test.
 	* gcc.target/aarch64/subs.c: New test.
